--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,18 +41,42 @@ jobs:
           # Build the website
           hugo --gc --minify
 
+      - name: Upload files
+        uses: actions/upload-artifact@v4
+        with:
+          name: hugo-files
+          path: |
+            public
+          if-no-files-found: error
+          retention-days: 1
+
+  prepare-files-for-github-pages:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [build-website]
+    steps:
+      - name: Download files
+        uses: actions/download-artifact@v4
+        with:
+          pattern: "*-files"
+
+      - name: Rename files
+        run: |
+          # Move the Hugo files to the public directory
+          mv hugo-files public
+
       - name: Upload files to GitHub Pages
         # Only run on main
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v3
         with:
-          path: public
+          path: ./public
 
   # Deployment job
   deploy:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build-website
+    needs: prepare-files-for-github-pages
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
